@@ -2,8 +2,10 @@
 
 * Support for the Infineon XC16X has been added by KPIT Cummins Infosystems.
 
-* Modify the Linux linker to seach /etc/ld.so.conf first before
-  checking default search directories for DT_NEEDED entries.
+* Modify the Linux linker search order to better match ld.so search order.
+  Look for DT_NEEDED libraries in paths specified by ld.so.conf before
+  searching the default directories, rather than vice versa.
+  Use $prefix/etc/ld.so.conf if it exists, otherwise /etc/ld.so.conf.
 
 * PE-COFF: Forward exports from DLL's can now be specified in .def files
   passed directly to ld.
